--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Tamil VIP</title>
-  <title>007</title>
+  <title>SANJAY</title>
+  <title>SK</title>
   <meta name="description" content="Web designer and front-end developer">
   <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet" type="text/css">
@@ -60,7 +60,7 @@
 
     <div class="section aboutme" data-anchor="aboutme">
       <div class="opaque-bg animated fadeInDown">
-        <h1 style="color:white">TAMIL<span style="color:#FF6363">/</span>VIP</h1>
+        <h1 style="color:white">SANJAY<span style="color:#FF6363">/</span>SKf</h1>
         <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
       </div>
       <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
@@ -77,7 +77,7 @@
     <div class="section" data-anchor="skills">
       <div class="content">
         <h1 class="wow fadeInDown" data-wow-delay="0.2s">ABOUT ME</h1>
-        <p class="wow fadeInDown" data-wow-delay="0.2s">Hi, I'm TAMIL VIP admin! I'm a Python coder & Front-end Developer focused on creating clean, responsive web designs!</p>
+        <p class="wow fadeInDown" data-wow-delay="0.2s">Hi, I'm SANJAY SK admin! I'm a Python coder & Front-end Developer focused on creating clean, responsive web designs!</p>
         
 
         <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
