--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="section aboutme" data-anchor="aboutme">
       <div class="opaque-bg animated fadeInDown">
-        <h1 style="color:white">SANJAY<span style="color:#FF6363">/</span>SKf</h1>
+        <h1 style="color:white">SANJAY<span style="color:#FF6363">/</span>SK</h1>
         <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
       </div>
       <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
